--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ rtp-rs = "0.5.0"
 simplelog = "^0.7.6"
 tokio = { version = "1.0.1", features = ["full"] }
 tokio-util = { version = "0.6.0", features = ["codec"] }
+dns-lookup = "1"
